Fix version positioning on smaller screens

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -788,7 +788,7 @@ svg {
     #version {
         font-size: 10px;
         height: 10px;
-        transform: translate(-50px, -5px);
+        transform: translate(-109px, 1px);
     }
     .sticky #menubar {
         position: fixed;
